@@ -26,6 +26,7 @@
 const ConfigChain = require('config-chain');
 const path        = require('path');
 const os          = require('os');
+const urlParser   = require('url');
 const assert      = require('assert');
 const moment      = require('moment');
 const GetOpt      = require('node-getopt');
@@ -131,14 +132,64 @@ var provide = function( generateConfigs ) {
         }
       }
     );
-    options.set('tempdir', (options.get('tempdir') || tempFilePath('npg_ranger_')));
-    if (!options.get('port')) {
-      options.set('port', path.join(options.get('tempdir'), 'npg_ranger.sock'));
-    }
+    adjustOptions(options);
   }
   assert(options, 'Options is undefined');
   return options;
 };
+
+function adjustOptions(options) {
+
+  var setTempDir = () => {
+    options.set('tempdir', (options.get('tempdir') || tempFilePath('npg_ranger_')));
+  };
+
+  var setPort = () => {
+    if (!options.get('port')) {
+      options.set('port', path.join(options.get('tempdir'), 'npg_ranger.sock'));
+    }
+    if (Number.isInteger(Number.parseInt(options.get('port')))) {
+      options.set('port', Number.parseInt(options.get('port')));
+    }
+  };
+
+  var setACAOrigin = () => {
+
+    if (options.get('anyorigin')) {
+      if (typeof options.get('anyorigin') != 'boolean') {
+        throw "'anyorigin' should be a boolean value";
+      }
+      if (options.get('originlist')) {
+        throw "'anyorigin' and 'originlist' options cannot both be set";
+      }
+      if (!options.get('skipauth')) {
+        throw 'anyorigin option cannot be used if authorization is performed';
+      }
+    } else if (options.get('originlist')) {
+      let olString = options.get('originlist');
+      if (typeof olString != 'string') {
+        throw "'originlist' should be a comma-separated string";
+      }
+      let re = new RegExp(/\*/);
+      if (re.test(olString)) {
+        throw "'originlist' string should not contain the wild card character *";
+      }
+      let l = olString.split(',');
+      l.forEach((el) => {
+        try {
+          urlParser.parse(el);
+        } catch (e) {
+          throw 'Invalid URL ${el} in a list of allowed origin URLs: ' + e;
+        }
+      });
+      options.set('originlist', l);
+    }
+  };
+
+  setTempDir();
+  setPort();
+  setACAOrigin();
+}
 
 var _formatDate = () => {
   return moment().format('YYYYMMDD_HHmmssSS');
