@@ -51,9 +51,9 @@ class RangerController {
    *                   skip authorisation
    */
   constructor(request, response, db, tmpDir, skipAuth) {
-    var options = config.provide();
+    let options = config.provide();
 
-    var validate = (obj) => {
+    let validate = (obj) => {
       return (obj && (typeof obj == 'object'));
     };
 
@@ -95,12 +95,36 @@ class RangerController {
     }
   }
 
-  _setDefaultHeaders() {
-    let port = config.get('port') || 'unknown';
-    if ( !this.skipAuth && typeof port == 'number' && config.get('cors') ) {
-      this.response.setHeader('Access-Control-Allow-Origin', '*');
-      this.response.setHeader('Access-Control-Allow-Methods', 'GET,OPTIONS');
-      this.response.setHeader('Access-Control-Allow-Headers', 'TE');
+  _methodIsAllowed() {
+    let m = this.request.method;
+    return m == 'GET' || m == 'OPTIONS';
+  }
+
+  _setCORSHeaders() {
+    let options = config.provide();
+
+    this.response.setHeader('Vary', 'Origin');
+    let requestOrigin = this.request.headers.origin;
+    if (requestOrigin) {
+
+      let allowedOrigin = '';
+      if (options.get('anyorigin')) {
+        allowedOrigin = '*';
+      } else if (options.get('originlist')) {
+        if (options.get('originlist').find((el) => {return requestOrigin === el;})) {
+          allowedOrigin = requestOrigin;
+        }
+      }
+
+      if (allowedOrigin) {
+        this.response.setHeader('Access-Control-Allow-Origin', allowedOrigin);
+        this.response.setHeader('Access-Control-Allow-Methods', 'GET,OPTIONS');
+        this.response.setHeader('Access-Control-Allow-Headers', 'TE,X-Remote-User');
+        this.response.setHeader('Access-Control-Max-Age', '1800'); // 30 minutes
+        if (!this.skipAuth) {
+          this.response.setHeader('Access-Control-Allow-Credentials', 'true');
+        }
+      }
     }
   }
 
@@ -309,6 +333,8 @@ class RangerController {
    * Maps the query to data sources and authorises the client for access.
    * Handles request and sends a reply to the client.
    *
+   * Only GET and OPTIONS requests are allowed.
+   *
    * User authentication should be performed elsewhere. It is expected that the
    * 'x-remote-user' header is set in the request.
    *
@@ -356,6 +382,17 @@ class RangerController {
    * server url (no additional separators are used).
    */
   handleRequest(host) {
+
+    if (!this._methodIsAllowed()) {
+      return this.errorResponse(
+        this.response, 405, this.request.method + ' request is not allowed');
+    }
+    this._setCORSHeaders();
+    if (this.request.method == 'OPTIONS') {
+      this.response.end();
+      return;
+    }
+
     assert(host, 'The data host name is required');
 
     let user = {};
